--- a/webView/Base.lproj/Main.storyboard
+++ b/webView/Base.lproj/Main.storyboard
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6751" systemVersion="14D131" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6736"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Web View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="WebViewController" customModule="webView" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -15,11 +15,114 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Gyy-yG-lm5">
+                                <rect key="frame" x="0.0" y="68" width="600" height="532"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="tintColor" red="0.49803921580314636" green="0.49803921580314636" blue="0.49803921580314636" alpha="1" colorSpace="calibratedRGB"/>
+                            </webView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Cgh-6d-fis">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="68"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vHy-cm-jcF">
+                                        <rect key="frame" x="560" y="20" width="40" height="48"/>
+                                        <color key="backgroundColor" red="0.80000001190000003" green="0.80000001190000003" blue="0.80000001190000003" alpha="1" colorSpace="calibratedRGB"/>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="30"/>
+                                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                                        <state key="normal" title="R"/>
+                                        <connections>
+                                            <action selector="refresh" destination="BYZ-38-t0r" eventType="touchUpInside" id="WHk-UX-d8v"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oUF-VS-51M">
+                                        <rect key="frame" x="520" y="20" width="40" height="48"/>
+                                        <color key="backgroundColor" red="0.80000001190000003" green="0.80000001190000003" blue="0.80000001190000003" alpha="1" colorSpace="calibratedRGB"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                                        <state key="normal" title="→">
+                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="goForward" destination="BYZ-38-t0r" eventType="touchUpInside" id="nxw-DM-nbB"/>
+                                        </connections>
+                                    </button>
+                                    <searchBar contentMode="redraw" placeholder="搜尋或輸入網址" translatesAutoresizingMaskIntoConstraints="NO" id="ACt-Qe-gVZ">
+                                        <rect key="frame" x="0.0" y="20" width="480" height="48"/>
+                                        <color key="backgroundColor" red="0.40000000596046448" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        <color key="barTintColor" red="0.80000001190000003" green="0.80000001190000003" blue="0.80000001190000003" alpha="1" colorSpace="calibratedRGB"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                        <connections>
+                                            <outlet property="delegate" destination="BYZ-38-t0r" id="p9t-N2-koe"/>
+                                        </connections>
+                                    </searchBar>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ERQ-Yi-Iua">
+                                        <rect key="frame" x="480" y="20" width="40" height="48"/>
+                                        <color key="backgroundColor" red="0.80000001190000003" green="0.80000001190000003" blue="0.80000001190000003" alpha="1" colorSpace="calibratedRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="40" id="UcT-cP-sir"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                                        <state key="normal" title="←">
+                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="goBack" destination="BYZ-38-t0r" eventType="touchUpInside" id="SzK-hZ-5sd"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" red="0.80000001192092896" green="0.80000001192092896" blue="0.80000001192092896" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstItem="ERQ-Yi-Iua" firstAttribute="top" secondItem="ACt-Qe-gVZ" secondAttribute="top" id="2Rp-Zv-dxt"/>
+                                    <constraint firstItem="oUF-VS-51M" firstAttribute="width" secondItem="vHy-cm-jcF" secondAttribute="width" id="6om-Cq-vgT"/>
+                                    <constraint firstItem="oUF-VS-51M" firstAttribute="height" secondItem="ERQ-Yi-Iua" secondAttribute="height" id="6ry-uQ-MsW"/>
+                                    <constraint firstItem="ERQ-Yi-Iua" firstAttribute="height" secondItem="ACt-Qe-gVZ" secondAttribute="height" id="D2f-WP-xfd"/>
+                                    <constraint firstItem="vHy-cm-jcF" firstAttribute="leading" secondItem="oUF-VS-51M" secondAttribute="trailing" id="DmT-9g-n8b"/>
+                                    <constraint firstItem="oUF-VS-51M" firstAttribute="top" secondItem="ERQ-Yi-Iua" secondAttribute="top" id="EoJ-kg-PL3"/>
+                                    <constraint firstItem="ACt-Qe-gVZ" firstAttribute="top" secondItem="Cgh-6d-fis" secondAttribute="top" constant="20" id="GlZ-oj-u3m"/>
+                                    <constraint firstAttribute="trailing" secondItem="vHy-cm-jcF" secondAttribute="trailing" id="Jbv-FE-7Z9"/>
+                                    <constraint firstAttribute="bottom" secondItem="ACt-Qe-gVZ" secondAttribute="bottom" symbolic="YES" id="JeE-AY-4bC"/>
+                                    <constraint firstItem="ERQ-Yi-Iua" firstAttribute="leading" secondItem="ACt-Qe-gVZ" secondAttribute="trailing" id="V2M-yK-ye5"/>
+                                    <constraint firstItem="oUF-VS-51M" firstAttribute="width" secondItem="ERQ-Yi-Iua" secondAttribute="width" id="Yf1-KM-Knj"/>
+                                    <constraint firstItem="ERQ-Yi-Iua" firstAttribute="centerY" secondItem="ACt-Qe-gVZ" secondAttribute="centerY" id="iVV-P4-PE9"/>
+                                    <constraint firstItem="oUF-VS-51M" firstAttribute="top" secondItem="vHy-cm-jcF" secondAttribute="top" id="ja0-ni-Jrq"/>
+                                    <constraint firstItem="oUF-VS-51M" firstAttribute="height" secondItem="vHy-cm-jcF" secondAttribute="height" id="lFx-yP-ova"/>
+                                    <constraint firstItem="oUF-VS-51M" firstAttribute="leading" secondItem="ERQ-Yi-Iua" secondAttribute="trailing" id="oIy-Xc-leh"/>
+                                    <constraint firstItem="ACt-Qe-gVZ" firstAttribute="leading" secondItem="Cgh-6d-fis" secondAttribute="leading" id="rsY-1o-bXp"/>
+                                </constraints>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="iVV-P4-PE9"/>
+                                    </mask>
+                                </variation>
+                            </view>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="Gyy-yG-lm5" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="76b-nJ-ECF"/>
+                            <constraint firstAttribute="trailing" secondItem="Cgh-6d-fis" secondAttribute="trailing" id="Aoy-fs-141"/>
+                            <constraint firstAttribute="trailing" secondItem="Gyy-yG-lm5" secondAttribute="trailing" id="QwZ-Ga-bbp"/>
+                            <constraint firstItem="Gyy-yG-lm5" firstAttribute="bottom" secondItem="wfy-db-euE" secondAttribute="top" id="T3f-bD-tKY"/>
+                            <constraint firstItem="Cgh-6d-fis" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="WF6-2W-y7S"/>
+                            <constraint firstItem="Gyy-yG-lm5" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="d82-Hl-YsJ"/>
+                            <constraint firstItem="Cgh-6d-fis" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="-20" id="ic2-bh-zft"/>
+                            <constraint firstItem="Gyy-yG-lm5" firstAttribute="top" secondItem="Cgh-6d-fis" secondAttribute="bottom" id="sFS-H9-T5A"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="d82-Hl-YsJ"/>
+                            </mask>
+                        </variation>
                     </view>
+                    <navigationItem key="navigationItem" id="38w-v6-IKq"/>
+                    <connections>
+                        <outlet property="searchBar" destination="ACt-Qe-gVZ" id="ufE-gY-cmj"/>
+                        <outlet property="webView" destination="Gyy-yG-lm5" id="WW6-jl-LNg"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1239" y="405"/>
         </scene>
     </scenes>
 </document>
